# clang-static-analysis

./: .gitignore  CMakeLists.txt  README.md  run.sh
snippets/: deterministic.cpp  showcase.sh  unknown-source-argv.cpp  unknown-source-getenv.cpp
src/: DataFlowAnalysis.cpp  PCH.hpp
